tests/baselines/reference/classAbstractSingleLineDecl.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(3,1): error TS2304: Cannot find name 'abstract'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(6,1): error TS2304: Cannot find name 'abstract'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts(10,1): error TS2511: Cannot create an instance of an abstract class.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSingleLineDecl.ts (3 errors) ====
    abstract class A {}
    
    abstract
    ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
    class B {}
    
    abstract
    ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
    
    class C {}
    
    new A;
    ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    new B;
    new C;